# moa-mil-calculator

./: .gitignore  .pre-commit-config.yaml  README.md  dev-requirements.txt  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build.yml
app/: .flake8  Dockerfile  README.md  grouping.py  plotting.py  requirements.txt  setup.py
app/src/: calc.py  config.py  requirements.txt
app/src/images/: README.md
app/src/tests/: test_calc.py
app/tests/: pytest.ini  test_calc.py  test_grouping.py
poc/: circle.py  ellipse.py  try.py
reports/: report.html
src/: app.py  calc.py  config.py  grouping.py  model.py  options.py  plotting.py
tests/: pytest.ini  test_app.py  test_calc.py  test_grouping.py
tests/reports/: report.html
