[tool.poetry]
name = "shooter-calculator"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
measurement= "^3.2.0"

[tool.poetry.dev-dependencies]
pytest = "7.1.3"
pytest-reporter = "0.5.2"
pytest-reporter-html1 = "0.8.2"
pytest-asyncio = "0.19.0"
matplotlib = "3.6.0"
flake8 = "5.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
